--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.data.mongodb.uri=mongodb://localhost:27017/product-service
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=product-service
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
