--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=product-service
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+server.port=0
