--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/inventory_service
 spring.datasource.username=root
 spring.jpa.hibernate.ddl-auto=create-drop
 server.port=0
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8761/eureka
