--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/order_service
 spring.datasource.username=root
 spring.jpa.hibernate.ddl-auto=update
 server.port=8081
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8761/eureka
