Distributed Service config done

--- a/discovery-server/src/main/resources/application.properties
+++ b/discovery-server/src/main/resources/application.properties
@@ -4,3 +4,7 @@ eureka.client.fetch-registry=false
 server.port=8761
 spring.security.user.name=eureka
 spring.security.user.password=password
+
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+management.tracing.sampling.probability=1.0
+
