--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.username=root
 spring.jpa.hibernate.ddl-auto=create-drop
 server.port=0
 eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8761/eureka
+
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+management.tracing.sampling.probability=1.0
