--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.database=product-service
 eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8761/eureka
 server.port=0
+
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+management.tracing.sampling.probability=1.0
