--- a/discovery-server/src/main/resources/application.properties
+++ b/discovery-server/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.security.user.password=password
 management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
 management.tracing.sampling.probability=1.0
 
+# Actuator Prometheus Endpoint
+management.endpoints.web.exposure.include= prometheus
+logging.level.org.springframework.security=DEBUG
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
