--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -8,3 +8,7 @@ eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8761/eurek
 
 management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
 management.tracing.sampling.probability=1.0
+
+# Actuator Prometheus Endpoint
+management.endpoints.web.exposure.include= prometheus
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
